caps-platform/templates/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: caps-service
spec:
  selector:
    app: caps-service
  ports:
  - port: 3000
    targetPort: 3000
  type: ClusterIP
